WIP component listing generator